# day2_task_rust

./: Cargo.toml
src/: actix.main.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
