[package]
name = "day2_task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"

# Example of customizing binaries in Cargo.toml.
[[bin]]
name = "native_hello_world"
path = "src/main.rs"

[[bin]]
name = "actix_hello_world"
path = "src/actix.main.rs"

# Untuk Membuat hasil build lebih kecil
[profile.release]
panic = "unwind"  # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols